--- a/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation/MainPage.xaml
+++ b/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation/MainPage.xaml
@@ -2,10 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:DevEnvExeMyLocation"
+              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="DevEnvExeMyLocation.MainPage">
-
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+  
+<StackLayout VerticalOptions="StartAndExpand" Padding="30">
+    <maps:Map WidthRequest="960" HeightRequest="700"
+        x:Name="MyMap"
+        IsShowingUser="True"
+        MapType="Street"
+        />
+  </StackLayout>
 
 </ContentPage>
