--- a/ReadOTPIOS/ReadOTPIOS/ReadOTPIOS/MainPage.xaml
+++ b/ReadOTPIOS/ReadOTPIOS/ReadOTPIOS/MainPage.xaml
@@ -2,33 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:local="clr-namespace:ReadOTPIOS" x:Class="ReadOTPIOS.MainPage"
-           
              >
- 
-    <Grid Padding="10,0,10,0">
 
+    <StackLayout Orientation="Vertical" VerticalOptions="Center">
         <Label
-            Grid.Row="0"
             FontSize="Large"
             HorizontalOptions="Center"
-            Text="Welcome to OTP Auto-Fill Control in Xamarin.Forms!" />
-
-        <Label
-            Grid.Row="1"
-            HorizontalOptions="Center"
-            Text="Deploy to device and send an OTP to the device, then watch it work! ;)" />
+            Text="Welcome to iOS 12 Read and Autofill OTP" />
 
         <local:AutoFillControl
-            Grid.Row="2"
             FontSize="Large"
             HorizontalOptions="Center"
             Keyboard="Numeric"
             Placeholder="XXXXXX" />
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-    </Grid>
+    </StackLayout>
 </ContentPage>
